--- a/templates/index.html
+++ b/templates/index.html
@@ -382,7 +382,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Storyboard </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Predictive </a>
 						</li>
 						<!-- SLIDE  -->
 						<li class="dark" data-index="rs-245" data-transition="slidehorizontal" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="{{ url_for('static', filename='images/buyout.jpg') }}"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
@@ -410,7 +410,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(0,100,0,0.30) 0%, rgba(0,100,0,0.55) 100%);"></div>
+								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(0,100,0,0.35) 0%, rgba(0,100,0,0.65) 100%);"></div>
 
 							<!-- LAYER NR. 12 -->
 							<div class="tp-caption  "
@@ -427,14 +427,14 @@ o
 								data-type="text"
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#fdfdfd","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","color":"#fdfdfd","to":"opacity:0;","ease":"nothing"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#fefefe","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","color":"#fefefe","to":"opacity:0;","ease":"nothing"}]'
 								data-textAlign="['center','left','center','center']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[10,10,0,0]"
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #fdfdfd; letter-spacing: -5px;font-family:Montserrat;">Contacts</div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #fefefe; letter-spacing: -5px;font-family:Montserrat;">Contacts</div>
 
 							<!-- LAYER NR. 13 -->
 							<div class="tp-caption  "
@@ -475,7 +475,7 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fdfdfd","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fdfdfd","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fefefe","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fefefe","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -499,7 +499,7 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fdfdfd","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fdfdfd","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fefefe","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fefefe","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
