--- a/templates/index.html
+++ b/templates/index.html
@@ -427,14 +427,14 @@ o
 								data-type="text"
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#fefefe","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","color":"#fefefe","to":"opacity:0;","ease":"nothing"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#fefefe","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","color":"#ffffff","to":"opacity:0;","ease":"nothing"}]'
 								data-textAlign="['center','left','center','center']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[10,10,0,0]"
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #fefefe; letter-spacing: -5px;font-family:Montserrat;">Contacts</div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Contacts</div>
 
 							<!-- LAYER NR. 13 -->
 							<div class="tp-caption  "
@@ -458,7 +458,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #fdfdfd; letter-spacing: px;font-family:Montserrat;">Email  &nbsp;Communications</div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #ffffff; letter-spacing: px;font-family:Montserrat;">Email  &nbsp;Communications</div>
 
 							<!-- LAYER NR. 14 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -475,14 +475,14 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fefefe","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fefefe","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgba(0,170,0);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Alert &nbsp;System </a>
+								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgba(0,140,0);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Alert &nbsp;System </a>
 
 							<!-- LAYER NR. 15 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
@@ -499,14 +499,14 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fefefe","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fefefe","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,170,0);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Contact &nbsp;Us </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,140,0);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Contact &nbsp;Us </a>
 						</li>
 						
 					</ul>
