--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -98,12 +98,12 @@
 
 				<div class="container clearfix">
 
-					<div class="menu-title"><span>ANALYTICS</span></div>
+					<div class="menu-title"><span>DATA</span>ANALYTICS</div>
 
 					<nav>
 						<ul>
-							<li class="current"><a href="#"><div>DASHBOARD</div></a></li>
-							<li><a href="#"><div>PREDICTIVE</div></a></li>
+							<li><a href="#" data-href="section-dashboard"><div>DASHBOARD</div></a></li>
+							<li><a href="#" data-href="section-predictive"><div>PREDICTIVE</div></a></li>
 						</ul>
 					</nav>
 
@@ -122,9 +122,22 @@
 			<!--<div class="content-wrap">
 
 				<div class="container clearfix"> -->
+			
+			<div id="section-dashboard" class="page-section"></div>
+						
+			<div class="heading-block topmargin noborder">
+				<h2 class="center">DASHBOARD</h2>
+			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
 				
+			<div id="section-predictive" class="page-section"></div>
+						
+			<div class="heading-block topmargin noborder">
+				<h2 class="center">PREDICTIVE</h2>
+			</div>
+					
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
 				<!-- </div>
 
 			</div> -->
