--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -102,8 +102,8 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="#" data-href="section-dashboard"><div>DASHBOARD</div></a></li>
-							<li><a href="#" data-href="section-predictive"><div>PREDICTIVE</div></a></li>
+							<li><a href="active" data-href="section-dashboard"><div>DASHBOARD</div></a></li>
+							<li><a href="predictive" data-href="section-predictive"><div>PREDICTIVE</div></a></li>
 						</ul>
 					</nav>
 
@@ -131,13 +131,6 @@
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
 				
-			<div id="section-predictive" class="page-section"></div>
-						
-			<div class="heading-block topmargin noborder">
-				<h2 class="center">PREDICTIVE</h2>
-			</div>
-					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
 				<!-- </div>
 
 			</div> -->
