--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -126,7 +126,7 @@
 			<div id="section-dashboard" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
-				<h2 class="center">DASHBOARD</h2>
+				<h2 class="center">ANALYTICS DASHBOARD</h2>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
