--- a/templates/predictive.html
+++ b/templates/predictive.html
@@ -102,7 +102,7 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="analytics" data-href="section-dashboard"><div>DASHBOARD</div></a></li>
+							<li><a href="analytics"><div>DASHBOARD</div></a></li>
 							<li><a href="#" data-href="section-predictive"><div>PREDICTIVE</div></a></li>
 						</ul>
 					</nav>
@@ -126,7 +126,7 @@
 			<div id="section-dashboard" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
-				<h2 class="center">PREDICTIVE ANALYTICS</h2>
+				<h2 class="center">PREDICTIVE &nbsp;ANALYTICS</h2>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
