--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -102,11 +102,11 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<ul>
 							<li><a href="dashboard"><div>DASHBOARD</div></a></li>
-							<li><a href="predictive"><div>PREDICTIVE</div></a></li>
+							<li><a href="forecasting"><div>FORECASTING</div></a></li>
+							<!--
 							<li><a href="story"><div>STORY</div></a></li>
-						</ul>
+							-->
 						</ul>
 					</nav>
 
@@ -126,7 +126,7 @@
 
 				<div class="container clearfix"> -->
 			
-			<div id="section-dashboard" class="page-section"></div>
+			<div id="section-forecasting" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
 				<h2 class="center">DASHBOARD</h2>
