--- a/templates/forecasting.html
+++ b/templates/forecasting.html
@@ -103,7 +103,10 @@
 					<nav class="one-page-menu">
 						<ul>
 							<li><a href="dashboard"><div>DASHBOARD</div></a></li>
-							<li><a href="predictive"><div>FORECASTING</div></a></li>
+							<li><a href="forecasting"><div>FORECASTING</div></a></li>
+							<!--
+							<li><a href="story"><div>STORY</div></a></li>
+							-->
 						</ul>
 					</nav>
 
@@ -123,10 +126,10 @@
 
 				<div class="container clearfix"> -->
 			
-			<div id="section-dashboard" class="page-section"></div>
+			<div id="section-forecasting" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
-				<h2 class="center">DASHBOARD</h2>
+				<h2 class="center">FORECASTING</h2>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
