--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -83,23 +83,21 @@
 
 				<div class="swiper-container swiper-parent">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide dark" style="background-image: url({{ url_for('static', filename='images/page-header-test.jpg') }});>
+						<div class="swiper-slide dark" style="background-image: url({{ url_for('static', filename='images/page-header-test.jpg') }});">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
-									<h2 data-animate="fadeInUp">Welcome to Canvas</h2>
-									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Create just what you need for your Perfect Website. Choose from a wide range of Elements &amp; simply put them on our Canvas.</p>
+									<h1 data-animate="fadeInUp" data-delay="400">Analytics</h1>
+									<span data-animate="fadeInUp" data-delay="300"></span>
 								</div>
 							</div>
 						</div>
 					</div>
+																				  
 					<div class="slider-arrow-left"><i class="icon-angle-left"></i></div>
 					<div class="slider-arrow-right"><i class="icon-angle-right"></i></div>
-					<div class="slide-number"><div class="slide-number-current"></div><span>/</span><div class="slide-number-total"></div></div>
-					<a href="#" data-scrollto="#section-about" class="one-page-arrow dark">
-						<i class="icon-angle-down infinite animated fadeInDown"></i>
-					</a>
+					
 				</div>
-
+				
 			</div>
 
 		</section>
